	* eval.c (set_OFS): If not being called from var_init(), check
	if $0 needs rebuilding. If so, parse the record fully and rebuild it.
	Make OFS point to a separate copy of the new OFS for next time, since
	OFS_node->var_value->stptr was already updated at this point.
	* field.c (rebuild_record): Is now extern instead of static.
	Use OFS and OFSlen instead of the value of OFS_node.

2014-08-05         Arnold D. Robbins     <arnold@skeeve.com>

	Bug fix: For MPFR sqrt(), need to set precision of result to be
	the same as that of the argument. Doesn't hurt other functions.
	See test/mpfrsqrt.awk. Thank to Katie Wasserman <katie@wass.net>
	for the bug report.

	* mpfr.c (do_mpfr_func): New function. Runs code for MPFR functions
	while still enabling debugging. Add call here to mpfr_set_prec().
	Original code from SPEC_MATH macro.
	(SPEC_MATH): Change macro to call do_mpfr_func().

	Next MPFR bug fix: The % operator gave strange results for negative
	numerator. Thanks again to Katie Wasserman for the bug report.

	* mpfr.c (mpg_mod): Use mpz_tdiv_qr() instead of mpz_mod(). From
	the GMP doc, mpz_mod() should have worked; it's not clear why
	it doesn't.

2014-08-03         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (format_tree): Don't need to check return value of
	wctombr for -2. Thanks to Eli Zaretskii for pointing this out.
	
	Unrelated:

	* gawkapi.h: Fix doc for API get_record - errcode needs to
	be greater than zero.
	* interpret.h (r_interpret): Move setting of ERRNO to here, from ...
	* io.c (inrec): ... here. Makes the code cleaner.

2014-08-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awkgram.y (getfname): Match on either ptr or ptr2 so --profile
	will work in -M (MPFR bignum) mode.

2014-07-31         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (format_tree): Make %c handling more sane on Windows.
	Rework the lint messages.

	Unrelated:

	* dfa.c: Sync with GNU grep. Mainly white space differences.
