@@ -100,12 +100,12 @@ testext_la_LIBADD     = $(MY_LIBS)
 
 install-data-hook:
 	for i in $(pkgextension_LTLIBRARIES) ; do \
-		$(RM) $(DESTDIR)$(pkgextensiondir)/$$i ; \
+		rm -f $(DESTDIR)$(pkgextensiondir)/$$i ; \
 	done
 
 # Keep the uninstall check working:
 uninstall-so:
-	$(RM) $(DESTDIR)$(pkgextensiondir)/*.so
+	rm -f $(DESTDIR)$(pkgextensiondir)/*.so
 
 uninstall-recursive: uninstall-so
 
