@@ -1,3 +1,10 @@
+2014-08-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (install-data-hook): Replace use of $(RM) by rm -f;
+	not all versions of make set that variable. Thanks to Jeremie
+	Courreges-Anglas <jca@wxcvbn.org> for the report.
+	(uninstall-so): Ditto.
+
 2014-06-13         Paul Gortmaker        <paul.gortmaker@windriver.com>
 
 	* Makefile.am (uninstall-so): Came across below bug while cross
